--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -11,6 +11,6 @@ mixin sForm()
 				+input("",'')
 				+input("",'')
 				+input("",'')
-				+e.btn.btn.btn-primary(type="submit") Submit
+				+e.btn.btn.btn-light(type="submit") Подать заявку
 				+policy
 	// end sForm
