--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -22,6 +22,37 @@
 		height: auto;
 	}
 
+  @include media-breakpoint-up(lg) {
+    margin-left: rem(-62);
+  }
+
+	&__logo {
+		display: inline-block;
+    // max-width: 70%;
+	}
+  .z, .menu {
+    position: relative;
+    z-index: 4;
+  }
+
+	padding-top: rem(22);
+  .img-1 {
+    width: rem(248);
+    max-width: 100%;
+    margin-right: rem(40);
+  }
+  .img-2 {
+    width: rem(282);
+    max-width: 100%;
+    margin-top: rem(9);
+  }
+  &__col {
+		@include media-breakpoint-down(lg) {
+			padding: 0;
+			margin: 0;
+		}
+	}
+
 
 	@include media-breakpoint-up(sm) {}
 	
