--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -450,7 +450,7 @@ $body-emphasis-color:       $black !default;
 //
 // Style anchor elements.
 
-$link-color:                              $primary !default;
+$link-color:                              $black;
 $link-decoration:                         underline !default;
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
@@ -626,7 +626,7 @@ $font-weight-bolder:          bolder !default;
 
 $font-weight-base:            $font-weight-normal !default;
 
-$line-height-base:            1.5 !default;
+$line-height-base:            1.2;
 $line-height-sm:              1.25 !default;
 $line-height-lg:              2 !default;
 
