feat: add contacts, FAQ, partners

--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -10,6 +10,10 @@
 	&__row {
 		// --bs-gutter-x: #{rem()};
 		--bs-gutter-y: #{rem(30)};
+    margin-bottom: rem(40);
+    @include media-breakpoint-up(xxl) {
+      margin-bottom: 0;
+    }
 	}
 
   &__sub-text {
@@ -27,10 +31,24 @@
     max-width: 100%;
   }
 
+  &__img-wrap {
+    text-align: right;
+  }
+
   .img-girl {
     max-width: 100%;
+    width: rem(350);
     @include media-breakpoint-up(xl) {
-      transform: translateY(-10%);
+      // transform: translateY(-10%);
+      margin-top: -15%;
+    }
+
+    @include media-breakpoint-down(xl) {
+      transform: translateY(10%);
+    }
+
+    @include media-breakpoint-up(lg) {
+    width: auto;
     }
   }
 
@@ -57,7 +75,11 @@
     padding: rem(20);
     box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.2);
     @include media-breakpoint-up(lg) {
-      padding: rem(55) rem(38) rem(77) rem(52);
+      padding: rem(55) rem(38) rem(70) rem(52);
+    }
+
+    @include media-breakpoint-up(xl) {
+      margin-top: rem(-86);
     }
 
     ul {
@@ -76,11 +98,16 @@
         display: inline-block;
         background: $purple;
         padding-right: rem(6);
-        width: rem(72);
-        height: rem(42);
+        width: rem(42);
+        height: rem(22);
         font-weight: 700;
-        font-size: rem(35);
+        font-size: rem(20);
         color: #fff;
+        @include media-breakpoint-up(lg) {
+          font-size: rem(35);
+          width: rem(72);
+          height: rem(42);
+        }
       }
     }
 
@@ -89,6 +116,9 @@
       align-items: center;
       gap: rem(10);
       margin-bottom: rem(6);
+      @include media-breakpoint-down(lg) {
+        font-size: rem(18);
+      }
     }
   }
 
@@ -104,15 +134,18 @@
   }
 
   .star-bg {
-    display: inline-block;
-    text-align: right;
-    margin-left: auto;
+    width: rem(110);
     @include media-breakpoint-up(lg) {
+      width: auto;
       position: absolute;
       right: rem(14);
       bottom: rem(14);
       z-index: -1;
     }
+  }
+
+  .star-wrap {
+    text-align: right;
   }
 
 	@include media-breakpoint-up(xl) {}
@@ -157,11 +190,25 @@
     align-items: center;
 
     img {
-      transform: translateY(-4px);
+      max-width: 100%;
+      @include media-breakpoint-down(xl) {
+        transform: translateY(-4px);
+      }
+    }
+
+    &__img-wrap {
+      width: rem(90);
+      @include media-breakpoint-down(md) {
+        width: rem(60);
+        flex-shrink: 0;
+      }
     }
 
     &__text {
-      font-size: rem(25);
+      font-size: rem(20);
+      @include media-breakpoint-up(md) {
+        font-size: rem(25);
+      }
     }
   }
 
