--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -14,24 +14,24 @@ mixin headerBlock()
 						li Полезные рекомендации по выстраиванию своего дела
 						li Экскурсии по топ-предприятиям твоего города
 						li Практические мастер-классы
-					+e.btn.btn.btn-light Подать заявку
+					+e.btn.btn.btn-light.btn-light_purple(href='#') Подать заявку
 				.col-lg-5
 					+e.img-wrap: +img('img/headerBlock-bg.png').img-girl
 			+e.inner-wrapper
 				+e.inner-title.text-center: h2 Для кого?
 				+e.icons-row.row
-					.col-6
+					.col.col-lg-6
 						+b.item
-							+img('img/svg/hat.svg')
-							+e.text Школьники от 14 до 18 лет
-					.col-6
+							+e.img-wrap: +img('img/svg/hat.svg')
+							+e.text Школьники от 14 до 18 лет
+					.col.col-lg-6
 						+b.item
-							+img('img/svg/star.svg')
-							+e.text Учащиеся колледжей, вузов, предприимчивая молодёжь от 14 до 35 лет
+							+e.img-wrap: +img('img/svg/star.svg')
+							+e.text Учащиеся колледжей, вузов, предприимчивая молодёжь от 14 до 35 лет
 				.text_large Благодаря участию в проекте, ты:
 				ul.text_large
 					li #[span 1] Встретишься с крупнейшими представителями бизнеса своего региона
 					li #[span 2] Получишь базовые знания о ведении бизнеса через экскурсии и мастер-классы
 					li #[span 3] Обретёшь единомышленников для совместного старта и развития своего дела
-				+img('img/svg/star-bg.svg').star-bg
+				.star-wrap: +img('img/svg/star-bg.svg').star-bg
 	// end headerBlock
