--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -2,12 +2,11 @@ extends ../layout/main.pug
 
 include ../blocks/headerBlock/_headerBlock.pug
 include ../blocks/sForm/_sForm.pug
-include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sCatalog/_sCatalog.pug
+include ../blocks/sFAQ/_sFAQ.pug
+include ../blocks/sPartners/_sPartners.pug
 
 block variables
 	- let  mainPage= 'main-page' 
@@ -23,6 +22,7 @@ block pagecontent
 	+parts('header')
 	main
 		+headerBlock 
-		+sContact()
-		
+		+sFAQ
+		+sPartners
+		+sContact
 	+parts('footer')
