feat: add sliders

--- a/sourse/pug/blocks/sFAQ/_sFAQ.scss
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.scss
@@ -1,6 +1,6 @@
 // start .sFAQ
 .sFAQ {
-	// --sPT: #{rem()};
+	--sPT: #{rem(60)};
 	// --sPB: #{rem()};
 	--sTPB: #{rem(71)};
 	background: $green;
