--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -44,3 +44,12 @@ mixin parts(elem)
 	script.
 		addBlock(`#{elem}`)
 	div(id=`${elem}Wrap`)
+
+
+mixin defaultSlider(arrow)
+	+b.defaultSwiper
+		if arrow
+			+arrow
+		.swiper
+			.swiper-wrapper
+				block
