--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,25 +1,101 @@
 .footer {
-		
 	margin-top: auto;
-// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
+	background-color: $gray-900;
+  color: $white;
+
+  a {
+    color: $white;
+    &:hover {
+      color: $primary;
+    }
+  }
+	@include media-breakpoint-up(lg) {
+		--sPT: #{rem(45)};
+		--sPB: #{rem(50)};
+	}
 	&__row{
-		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: var(--bs-gutter-x);
+		--bs-gutter-y: #{rem(20)};
+	}
+	&__col {
+		@include media-breakpoint-up(xxl) {
+			min-width: rem(470);
+		}
+	}
+	&__social-col {
+		@include media-breakpoint-up(xxl) {
+			max-width: rem(219);
+      margin-top: rem(36);
+		}
+	}
+	&__last-col {
+		@include media-breakpoint-up(xxl) {
+			margin-right: rem(14.200);
+      margin-top: rem(36);
+		}
+	}
+	&__container {
+		@include media-breakpoint-up(xxl) {
+			max-width: rem(1245);
+		}
+	}
+	h5 {
+		font-family: $font-family-sans-serif;
+		margin-bottom: rem(8);
+		font-weight: 400;
+    font-size: rem(16);
+		@include media-breakpoint-up(xxl) {
+			margin-top: rem(4);
+		}
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(12);
+		}
+	}
+	&__logo {
+		display: block;
+		max-width: max-content;
+		margin-bottom: rem(29);
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+	&__link {
+		display: block;
+		max-width: max-content;
+		font-size: rem(13);
+		line-height: 1.07;
+		text-decoration: underline;
+    opacity: .6;
+		&:not(:last-of-type) {
+			margin-bottom: rem(16);
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(30);
+			}
+		}
+	}
+	&__social-link {
+		font-size: rem(12);
+	}
+	.menu {
+		--bs-gutter-x: 0;
+		--bs-gutter-y: 10px;
+    gap: 0 rem(14);
 
-	}
-	.section-title{
-		
-	}
-	&__col{
-
-	}
-	&__item{
-
-	}
-	&__slide{
-		height: auto;
+		flex-wrap: wrap;
+		max-width: rem(186);
+    font-size: rem(12);
+		&-item {
+			width: 40%;
+			text-align: left;
+      margin-bottom: rem(10);
+			@include media-breakpoint-up(xl) {
+        margin-bottom: rem(2);
+      }
+		}
+		@include media-breakpoint-up(xxl) {
+      margin-left: rem(30);
+      margin-top: rem(16);
+    }
 	}
 // 
 @include media-breakpoint-up(xl) {}
