--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -15,7 +15,7 @@ $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #3F3F3F;
-$gray-900: #212529 !default;
+$gray-900: #1D1F1C;
 $black:    #000 !default;
 // scss-docs-end gray-color-variables
 
