feat: add apply block

--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -29,7 +29,7 @@ mixin headerBlock()
 							+e.img-wrap: +img('img/svg/star.svg')
 							+e.text Учащиеся колледжей, вузов, предприимчивая молодёжь от 14 до 35 лет
 				.text_large Благодаря участию в проекте, ты:
-				ul.text_large
+				ul.text_large.list_colored.list_colored_purple
 					li #[span 1] Встретишься с крупнейшими представителями бизнеса своего региона
 					li #[span 2] Получишь базовые знания о ведении бизнеса через экскурсии и мастер-классы
 					li #[span 3] Обретёшь единомышленников для совместного старта и развития своего дела
