--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -83,43 +83,14 @@
     }
 
     ul {
-      list-style-type: none;
       margin-top: rem(20);
-      margin-left: 0;
       margin-bottom: 0;
+
       @include media-breakpoint-up(lg) {
       max-width: calc(100% - 200px);
-
-      }
-      span {
-        flex-shrink: 0;
-        border-radius: rem(18) rem(4) rem(4) rem(4);
-        text-align: end;
-        display: inline-block;
-        background: $purple;
-        padding-right: rem(6);
-        width: rem(42);
-        height: rem(22);
-        font-weight: 700;
-        font-size: rem(20);
-        color: #fff;
-        @include media-breakpoint-up(lg) {
-          font-size: rem(35);
-          width: rem(72);
-          height: rem(42);
-        }
       }
     }
 
-    li {
-      display: flex;
-      align-items: center;
-      gap: rem(10);
-      margin-bottom: rem(6);
-      @include media-breakpoint-down(lg) {
-        font-size: rem(18);
-      }
-    }
   }
 
   &__inner-title {
@@ -147,42 +118,6 @@
   .star-wrap {
     text-align: right;
   }
-
-	@include media-breakpoint-up(xl) {}
-
-	@include media-breakpoint-up(lg) {}
-
-	@include media-breakpoint-up(md) {}
-
-	@include media-breakpoint-up(sm) {}
-
-	@include media-breakpoint-up(xs) {}
-
-	//
-	@include media-breakpoint-between(md, xl) {}
-
-
-	//
-	@include media-breakpoint-only(xs) {}
-
-	@include media-breakpoint-only(sm) {}
-
-	@include media-breakpoint-only(md) {}
-
-	@include media-breakpoint-only(lg) {}
-
-	@include media-breakpoint-only(xl) {}
-
-	//
-	@include media-breakpoint-down(xl) {}
-
-	@include media-breakpoint-down(lg) {}
-
-	@include media-breakpoint-down(md) {}
-
-	@include media-breakpoint-down(sm) {}
-
-	@include media-breakpoint-down(xs) {}
 
   .item {
     display: flex;
@@ -212,6 +147,49 @@
     }
   }
 
+}
+
+.list_colored {
+  list-style-type: none;
+  margin-bottom: 0;
+  margin-left: 0 !important;
+
+  &_green span {
+    background: $green;
+    color: $gray-900;
+  }
+
+  &_purple span {
+    background: $purple;
+    color: $white;
+  }
+
+  span {
+    flex-shrink: 0;
+    border-radius: rem(18) rem(4) rem(4) rem(4);
+    text-align: end;
+    display: inline-block;
+    padding-right: rem(6);
+    width: rem(42);
+    height: rem(28);
+    font-weight: 700;
+    font-size: rem(20);
+    @include media-breakpoint-up(lg) {
+      font-size: rem(35);
+      width: rem(72);
+      height: rem(42);
+    }
+  }
+
+  li {
+    display: flex;
+    align-items: center;
+    gap: rem(10);
+    margin-bottom: rem(6);
+    @include media-breakpoint-down(lg) {
+      font-size: rem(18);
+    }
+  }
 }
 
 // end.headerBlock
