--- a/sourse/pug/blocks/sPersons/_sPersons.pug
+++ b/sourse/pug/blocks/sPersons/_sPersons.pug
@@ -13,7 +13,7 @@ mixin sPersons(data)
 					+e.slide.swiper-slide
 						+card('Вадим Кульков', 'Краснодарский край', 'Компания «БРОНИРУЙ»')
 					+e.slide.swiper-slide
-						+card('Вадим Кульков', 'Красноярский край', 'Компания «БРОНИРУЙ» Компания «БРОНИРУЙ»')
+						+card('Вадим Кульков', 'Красноярский край', 'Компания «БРОНИРУЙ»')
 					+e.slide.swiper-slide
 						+card('Вадим Кульков', 'Краснодарский край', 'Компания «БРОНИРУЙ»')
 					+e.slide.swiper-slide
