--- a/sourse/pug/blocks/sPartners/_sPartners.scss
+++ b/sourse/pug/blocks/sPartners/_sPartners.scss
@@ -1,6 +1,6 @@
 // start .sPartners
 .sPartners {
-	--sPT: #{rem(40)};
+	--sPT: #{rem(44)};
 	--sPB: #{rem(32)};
 	--sTPB: #{rem(46)};
 	
@@ -16,7 +16,10 @@
 	}
 	&__item{
 		display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: 1fr;
+    @include media-breakpoint-up(md) {
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    }
 
     gap: rem(19) rem(16);
 	}
