--- a/sourse/pug/blocks/sEvents/_sEvents.pug
+++ b/sourse/pug/blocks/sEvents/_sEvents.pug
@@ -11,7 +11,7 @@ mixin sEvents(data)
 					+img("img/svg/flip-card-bg-1.svg").w
 					+img("img/flip-card-man.png").man
 					+img("img/flip-card-man-bg.png").man-bg.d-none.d-xxl-block
-				+flipCard('Бизнес-экскурсия','Окунись в мир бизнеса через экскурсии по компаниям предпринимателей, где ты сможешь всё потрогать, пощупать и лично у владельцев узнать принципы работы бизнес-процессов.', 'is-flipped')
+				+flipCard('Бизнес-экскурсия','Окунись в мир бизнеса через экскурсии по компаниям предпринимателей, где ты сможешь всё потрогать, пощупать и лично у владельцев узнать принципы работы бизнес-процессов.', '')
 					+img("img/svg/star-green.svg").star
 					+img("img/flip-card-2.png").card-2
 				+flipCard('Мастер-класс','Узнай, как на самом деле работает бизнес, участвуй в практических мастер-классах и раскрой свои таланты.', '')
