--- a/sourse/pug/blocks/sPersons/_sPersons.pug
+++ b/sourse/pug/blocks/sPersons/_sPersons.pug
@@ -44,17 +44,17 @@ mixin sPersons2(data)
 				+arrow
 				.swiper-wrapper
 					+e.slide.swiper-slide
-						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций – от подготовки почвы до первичной переработки зерна; электронные решения для повышения эффективности сельхозработ и аграрного бизнеса. Продуктовая линейка компании включает в себя более 150 моделей и модификаций 24 типов техники.', 1)
+						+firmCard('«Мордовагроресурс»', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций – от подготовки почвы до первичной переработки зерна; электронные решения для повышения эффективности сельхозработ и аграрного бизнеса. Продуктовая линейка компании включает в себя более 150 моделей и модификаций 24 типов техники.', 1)
 					+e.slide.swiper-slide
 						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций – от подготовки почвы до первичной переработки зерна; электронные решения для повышения эффективности сельхозработ и аграрного бизнеса. Продуктовая линейка компании включает в себя более 150 моделей и модификаций 24 типов техники.', 2)
 					+e.slide.swiper-slide
-						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 3)
+						+firmCard('Молочный комбинат «Коровка из Кореновки»', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 3)
 					+e.slide.swiper-slide
-						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 4)
+						+firmCard('Саратовстройстекло', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 4)
 					+e.slide.swiper-slide
 						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 5)
 					+e.slide.swiper-slide
-						+firmCard('mord', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 6)
+						+firmCard('«Акконд»', 'Саранск', 'Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций', 6)
 				.swiper-pagination
 	// end sPersons
 
@@ -63,7 +63,8 @@ mixin firmCard(name, city, company, i)
 		+img(`img/svg/line.svg`).line
 		.row
 			+e.content.col-12.col-lg-8
-				+img(`img/svg/${name}.svg`).name
+				h3= name
+				//- +img(`img/svg/${name}.svg`).name
 				+e.city
 					+icon('location')
 					| #{city}
