fix: edit zig-zag

--- a/sourse/pug/blocks/sFAQ/_sFAQ.pug
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.pug
@@ -22,4 +22,5 @@ mixin sFAQ(data)
 				+ddGroupItem('Смогут ли предприниматели стать моими наставниками?', 'active')
 					p Возможно, для этого достаточно обратиться к ним после мероприятия с запросом
 			.text-center: +e.btn.btn.btn-light.btn-light_orange(href='#') Подать заявку
+			+img('img/svg/zig-zag-update.svg').zig-zag
 	// end sFAQ
