--- a/sourse/pug/blocks/sPartners/_sPartners.pug
+++ b/sourse/pug/blocks/sPartners/_sPartners.pug
@@ -1,7 +1,7 @@
 mixin sPartners(data)
 	// start sPartners
 	+b.SECTION.sPartners.section#sPartners&attributes(attributes)
-		+img('img/svg/zig-zag.svg').zig-zag
+		//- +img('img/svg/zig-zag.svg').zig-zag
 		.container
 			+b.section-title.text-center
 				h2 Партнёры
