--- a/sourse/pug/blocks/sFAQ/_sFAQ.scss
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.scss
@@ -1,40 +1,61 @@
 // start .sFAQ
 .sFAQ {
 	--sPT: #{rem(60)};
-	// --sPB: #{rem()};
+	padding-bottom: 0;
+	.container {
+		padding-bottom: var(--sPB);
+	}
+	--sPB: #{rem(100)};
 	--sTPB: #{rem(71)};
 	background: $green;
-	&__row{
+	position: relative;
+	& > * {
+		position: relative;
+		z-index: 2;
+	}
+	.zig-zag {
+		z-index: -1;
+		position: absolute;
+		min-width: 100vw;
+		aspect-ratio: 1440 /577;
+		left: 50%;
+		translate: -50%;
+		bottom: -12%;
+	}
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
 	}
-	.section-title{
-		
+	.section-title {
 	}
-	&__col{
-		
+	&__col {
 	}
-	&__item{
-		
+	&__item {
 	}
 
-  .dd-group {
-    margin-bottom: rem(25);
-  }
+	.dd-group {
+		margin-bottom: rem(25);
+	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sFAQ
-
 
 .dd-group {
 	&__item {
-    overflow: hidden;
+		overflow: hidden;
 		@include mt;
 		background-color: #fff;
 		border-radius: rem(25);
@@ -62,7 +83,7 @@
 		}
 		&:after {
 			@include mt;
-			content: '';
+			content: "";
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
@@ -71,8 +92,8 @@
 			height: rem(22);
 			@include media-breakpoint-up(md) {
 				right: rem(24);
-        width: rem(40);
-        height: rem(40);
+				width: rem(40);
+				height: rem(40);
 			}
 
 			background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='40' height='40' rx='20' fill='black' /%3E%3Cpath d='M8 20H32' stroke='white' stroke-width='2' /%3E%3Cpath d='M20 8L20 32' stroke='white' stroke-width='2' /%3E%3C/svg%3E");
@@ -83,8 +104,8 @@
 	}
 	&__content {
 		display: none;
-    border-top: 1px solid #000;
-		padding: rem(7.200) rem(32) rem(24) rem(24);
+		border-top: 1px solid #000;
+		padding: rem(7.2) rem(32) rem(24) rem(24);
 		@include media-breakpoint-up(md) {
 			padding: rem(23) rem(44) rem(44) rem(21);
 		}
