--- a/sourse/pug/blocks/sEvents/_sEvents.pug
+++ b/sourse/pug/blocks/sEvents/_sEvents.pug
@@ -15,7 +15,7 @@ mixin sEvents(data)
 					+img("img/svg/star-green.svg").star
 					+img("img/flip-card-2.png").card-2
 				+flipCard('Мастер-класс','Узнай, как на самом деле работает бизнес, участвуй в практических мастер-классах и раскрой свои таланты.', '')
-					+img("img/flip-card-3.png").card-3
+					+img("img/flip-card-3.png").man
 			+e.inner-wrapper
 				+lineCard(1, `Август – сентябрь 2024`)
 				+lineCard(2, `Сентябрь – ноябрь 2024`)
