--- a/sourse/pug/blocks/sEvents/_sEvents.scss
+++ b/sourse/pug/blocks/sEvents/_sEvents.scss
@@ -324,12 +324,12 @@
 
   .man {
     position: absolute;
-    max-height: initial !important;
+    // max-height: initial !important;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     max-width: 100%;
-    // max-height: 90%;
+    max-height: 100%;
     z-index: -1;
   }
 
